# pythonavscl-28012026

./: tp_ctx.py  tp_list.py  vincent.py
01-fonctions-avancees/: 01-mutabilite.py  02-portee.py  03-functions.py  04-deco.py  05-deco-params.py  func.py
02-obj/: Carre.py  Cercle.py  ICalcGeo.py  ICalcGeoProtocol.py  Rectangle.py  RectangleData.py  RectangleOld.py  main.py  main_orm.py
03-metaclass/: Rectangle.py  RectangleSingleton.py  SingletonMeta.py  main.py  singletonDeco.py
04-exceptions/: main.py
05-dao/: Customer.py  CustomerDAO.py  main.py
prepa/01-fonctions-avancees/: 01_references_mutabilite.py  02_portee_variables.py  03_fonctions_first_class.py  04_closures.py  05_decorateurs_base.py  06_decorateurs_parametres.py  07_decorateurs_design_patterns.py  08_atelier_log_calls.py  09_atelier_require_positive.py  10_atelier_pipeline.py  README.md
prepa/02-poo-avancee/: 01_property.py  02_iterateurs.py  03_generateurs.py  04_itertools.py  05_context_managers.py  06_abc.py  07_heritage_multiple_mro.py  08_metaclasses.py  README.md
prepa/03-design-patterns/: 01_factory.py  02_singleton.py  03_adapter.py  04_observer.py  05_strategy.py  06_patterns_pythoniques.py  07_dataclasses.py  08_pydantic.py  09_atelier_notification.py  10_atelier_ecommerce.py  README.md
prepa/04-qualite-logicielle/: .pre-commit-config.yaml  01_conventions_style.py  02_type_hints.py  03_unittest_base.py  04_pytest_base.py  05_pytest_fixtures.py  06_pytest_parametrize.py  07_tdd_fizzbuzz.py  08_mocking.py  09_profiling.py  README.md  pyproject.toml
prepa/04-qualite-logicielle/tests/: conftest.py  test_example.py
