# =============================================================================
# Configuration unifiée pour un projet Python
# =============================================================================
#
# Ce fichier centralise la configuration des outils de qualité.
# Copiez-le à la racine de votre projet.

[project]
name = "mon-projet"
version = "1.0.0"
description = "Exemple de configuration Python"
requires-python = ">=3.10"
authors = [
    {name = "Votre Nom", email = "votre@email.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

# =============================================================================
# BLACK - Formatage automatique
# =============================================================================
# Note: Ruff inclut maintenant un formateur équivalent (ruff format)

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | __pycache__
)/
'''

# =============================================================================
# ISORT - Tri des imports
# =============================================================================
# Note: Ruff inclut cette fonctionnalité (règle I)

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["mon_projet"]
skip = [".git", ".venv", "build", "dist"]

# =============================================================================
# RUFF - Linter et formateur moderne (remplace flake8, isort, black)
# =============================================================================

[tool.ruff]
# Longueur de ligne
line-length = 88
# Version Python cible
target-version = "py310"
# Répertoires à exclure
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Règles à activer
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
# Règles à ignorer
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument default
]

[tool.ruff.lint.isort]
known-first-party = ["mon_projet"]

[tool.ruff.lint.per-file-ignores]
# Ignorer les imports non utilisés dans __init__.py
"__init__.py" = ["F401"]
# Ignorer les assertions dans les tests
"tests/**/*.py" = ["S101"]

# =============================================================================
# MYPY - Vérification statique des types
# =============================================================================

[tool.mypy]
python_version = "3.10"
# Mode strict (recommandé pour les nouveaux projets)
strict = true
# Avertissements supplémentaires
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
# Désactive pour les modules sans stubs
ignore_missing_imports = true
# Affiche le code d'erreur
show_error_codes = true
# Rapport de couverture
show_column_numbers = true

# Configuration par module
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# PYTEST - Framework de tests
# =============================================================================

[tool.pytest.ini_options]
# Répertoire des tests
testpaths = ["tests"]
# Options par défaut
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
# Marqueurs personnalisés
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
# Filtrer les warnings
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# COVERAGE - Couverture de code
# =============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# BANDIT - Analyse de sécurité
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert used
